# agent-sandbox

./: .gitignore  README.md  pyproject.toml
sandbox/: app_process.py  browser_agent.py  config.py  gitea_client.py  mcp_server.py  seed.py  state.py  tasks.py
scripts/: demo_bua.py  start_app.sh  stop_app.sh
tests/: conftest.py  test_browser_agent.py  test_client.py  test_mcp.py  test_state.py
