[project]
name = "agent-sandbox"
version = "0.1.0"
description = "An RL-style sandbox around a real OSS app (Gitea): drive it via a FastMCP server or a browser-use agent, with populate/snapshot/restore against the app's real on-disk state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tachyurgy" }]
dependencies = [
    "fastmcp>=2.3",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sandbox-mcp = "sandbox.mcp_server:main"
sandbox-seed = "sandbox.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
